style.css
/*  
Theme Name: Happy Cyclope
Theme URI: http://designer-daily.com
Description: 2 columns, left sidebar, Widget ready, valid CSS & XHTML transitionnal 
Version: 1.0
Author: Designer daily
Author URI: http://designer-daily.com
Tags:two columns,fixed width,easy customization, widget ready, valid CSS, valid XHTML, sidebar left
*/

/* BASIC STRUCTURE */

* {margin:0;padding:0;font-family: Trebuchet, Helvetica, Verdana, Arial, sans-serif;}
body {background:#eee;padding:0 0 0 30px;}
div#wrapper {position:relative;width:926px;margin:0 auto;background:#fff;}
div#container {position:relative;margin:3px 0 0 3px;width:900px;}

/* HEADER */

#header {position:relative;width:900px;padding:7px 10px;float:left;background:#14192F;}
h1 {position:relative;float:left;width:400px;font-size:0.9em;text-transform:uppercase;margin:5px 0;color:#476D8F;}
h1 a {text-decoration:none;color:#fff;}
h1 a:hover {color:#aaa;}
#description {position:relative;float:right;width:400px;text-align:right;margin:5px 0;color:#779DBF;}
#preheader {position:relative;float:left;width:890px;padding:5px 0;margin:0;}
#header #imageheader {position:relative;float:left;width:900px;margin:0;padding:0;}
#header #imageheader #imglogo {position:relative;float:left;width:200px;margin:0 3px 0 0;}
#header #imageheader #imgbg {position:relative;float:left;width:697px;height:200px;background:url(images/header.jpg);}
#header #imageheader img {border:0;margin:0;padding:0;}
#header #imageheader #imgbg #rss {position:absolute;bottom:8px;left:40px;width:300px;font-size:0.9em;color:#bbb;}
#header #imageheader #imgbg #rss a {color:#fff;text-decoration:none;}
#header #imageheader #imgbg #rss a:hover {text-decoration:underline;}
#header #imageheader #imgbg #rss img {margin:0 7px -7px 0;}
#header #imageheader #imgbg #search {position:absolute;text-align:right;right:10px;bottom:8px;width:300px;}
#header #imageheader #imgbg #search input#s {border:1px solid #476B8F;}
#header #imageheader #imgbg #search input#searchsubmit {background:transparent;border:none;color:#ddd;font-size:0.8em;}

/* SIDEBAR */

#sidebar {position:relative;float:left;width:200px;margin:0 3px 0 5px;padding:20px 0 0 0;font-size:0.9em;}
#sidebar ul {list-style-type:none;margin:0 0 20px;line-height:1.2em;}
#sidebar h2 {font-size:0.9em;padding:5px;margin:0;border-bottom:1px solid #bbb;}
#sidebar h2 a {text-decoration:none;color:#000;}
#sidebar h2 a:hover {text-decoration:underline;}
#sidebar h2 img {margin:0 5px -2px 0;}
#sidebar ul li a {display:block;text-transform:uppercase;font-size:0.9em;width:190px;padding:15px 5px 8px;color:#000;text-decoration:none;border-bottom:1px dotted #ddd;}
#sidebar ul li a:hover {background:#eee;border-bottom:1px dotted #555;}
#sidebar ul li ul {margin:0;}
#sidebar ul li ul li {list-style-type:disc;color:#999;margin:0 0 0 20px;text-transform:none;}
#sidebar ul li ul li a {text-transform:none;width:170px;}
#sidebar .current-cat a, #sidebar .current_page_item a {background:#FFFFDF;}
#sidebar ul#recentcomments li.recentcomments {display:block;text-transform:uppercase;font-size:0.9em;width:190px;padding:15px 5px 8px;color:#000;text-decoration:none;border-bottom:1px dotted #ddd;}
#sidebar ul#recentcomments li.recentcomments a {border-bottom:none;font-size:1em;}
#sidebar .textwidget {padding:10px 0 20px 5px;font-size:0.9em;line-height:1.2em;}
#sidebar select {margin:15px 0 30px 5px;width:195px;border:1px dotted #555;padding:3px;font-size:0.8em;}
#sidebar select option {padding:3px;}
#sidebar table#wp-calendar {width:190px;margin:10px 0 0 5px;}
#sidebar table#wp-calendar caption {margin:15px 0 0 0;font-weight:bold;}
#sidebar table#wp-calendar td {height:25px;text-align:center;}
#sidebar table#wp-calendar td a {color:#000;font-weight:bold;text-decoration:none;}
#sidebar table#wp-calendar td a:hover {background:#ddd;}
#sidebar table#wp-calendar tfoot a {padding:5px;text-decoration:none;background:#eee;border:1px solid #ddd;color:#000;}

/* CONTENT */

#content div#sidebar {position:relative;float:left;width:200px;}
#content #posts {position:relative;float:right;width:650px;padding:30px 0 0 20px;}
#content #posts h2 {margin:0 0 5px 0;}
#content #posts h2 a {font-size:1.1em;font-weight:normal;color:#000;text-decoration:none;}
#content #posts .post {position:relative;float:left;margin:0 0 70px 0;}
#content #posts .post .metadata {font-size:0.75em;color:#555;margin:0 0 20px 0;}
#content #posts .post .metadata a {color:#000;text-decoration:none;}
#content #posts .post .metadata a:hover {text-decoration:underline;}
#content #posts .post .postcontent {line-height:1.3em;color:#333;font-size:0.95em;}
#content #posts .post .postcontent p {margin:10px 0;}
#content #posts .post .postcontent ul {padding:10px 0 10px 40px;}
#content #posts .post .postcontent ol {padding:10px 0 10px 40px;list-style-type:decimal;}
#content #posts .post .postcontent ol li {list-style-type:decimal;}
#content #posts .post .postcontent img {border:1px solid #888;}
#content #posts .post .postcontent blockquote {background:#eee;border:1px dotted #ccc;padding:15px;font-style:italic;}
#content #posts .post a {color:#0C283F;}
#content #posts .post a:hover {text-decoration:none;color:#224D6F;}
#content #posts .post .commentlink {position:relative;float:right;margin:10px 0 20px 0;}
#content #posts .post .commentlink a {padding:8px;border:1px solid #999;background:#eee;text-decoration:none;color:#333;}
#content #posts .post .commentlink a:hover {color:#000;border:1px solid #000;background:#ddd;}
#content .navigation { clear: both; }
#content .navigation .alignleft {float:left;}
#content .navigation .alignright {float:right;}
#content .navigation .alignleft a, #content .navigation .alignright a {text-decoration:none;color:#000;padding:8px;border:1px solid #ddd;background:#eee;}
#content .navigation .alignleft a:hover, #content .navigation .alignright a:hover {background:#ddd;border:1px solid #aaa;}

h3 #searchresults {color:#FF000A;}

/* ARCHIVES */
#content .categoryposts h3 {font-size:1.2em;margin:0 0 30px 0;}
#content .categoryposts h3 a {color:#000;text-decoration:none;}
#content .categoryposts h3 a:hover {text-decoration:underline;}
#content #posts li {list-style-type:disc;margin:10px 0 0 15px;}
#content #posts li a {color:#000;text-decoration:none;}
#content #posts li a:hover {text-decoration:underline;}

/* COMMENTS */
#comments  {position:relative;float:left;width:650px;}
#comments h2 {position:relative;float:left;font-size:1.2em;font-weight:normal;padding:10px;margin:10px 0 0 0;}
#comments p {margin:0 10px 10px 10px;clear:both;}
#comments ul#commentlist {position:relative;float:left;width:650px;list-style-type:none;}
#comments ul#commentlist li {position:relative;float:left;padding:20px 10px 25px 10px;width:630px;border-bottom:1px dotted #555;list-style-type:none;margin:0;}
#comments ul#commentlist li.graybox {background:#eee;}
#comments ul#commentlist li .commentheader {position:relative;float:left;width:200px;}
#comments ul#commentlist li .commentheader cite {position:relative;float:left;width:200px;padding:5px 0 8px 0;font-style:normal;font-weight:bold;clear:both;}
#comments ul#commentlist li .commentheader cite a {color:#333;text-decoration:none;}
#comments ul#commentlist li .commentheader cite a:hover {text-decoration:underline;color:#000;}
#comments ul#commentlist li .commentheader .commentnumber {position:relative;float:left;width:200px;font-size:0.8em;}
#comments ul#commentlist li .commentheader .commentnumber a {color:#333;text-decoration:none;}
#comments ul#commentlist li .commentheader .commentnumber a:hover {color:#000;text-decoration:underline;}
#comments ul#commentlist li .commentheader small {color:#888;font-size:0.8em;}
#comments ul#commentlist li .commenttext {position:relative;float:right;width:400px;font-size:0.9em;color:#555;line-height:1.2em;padding:8px 0 0 0;}
#comments ul#commentlist li .commenttext a {color:#000;}
#comments ul#commentlist li .commenttext a:hover {text-decoration:none;}
#comments form#commentform {position:relative;float:left;padding:10px;background:#eee;border:1px solid #ddd;width:630px;}
#comments form#commentform p {padding:5px 0;}
#comments form#commentform input {border:1px solid #ddd;margin:0 10px 0 0;}
#comments form#commentform label {font-size:0.9em;}
#comments form#commentform textarea {width:600px;border:1px solid #ddd;}
#comments form#commentform input#submit {float:right;margin:5px 25px;padding:8px 5px 5px;background:#555;color:#fff;}

/* FOOTER */

#footer {position:relative;float:left;width:100%;text-align:center;padding:10px;font-size:0.8em;border-top:1px solid #bbb;margin:20px 0 0 0;color:#888;}
#footer a {color:#333;text-decoration:none;}
#footer a:hover {text-decoration:underline;}

/* IMAGES */
img.centered {display: block;margin-left: auto;margin-right: auto;}img.alignright {padding: 4px;margin: 0 0 2px 7px;display: inline;}img.alignleft {padding: 4px;margin: 0 7px 2px 0;display: inline;}.alignright {float: right;}.alignleft {float: left;}

